--- a/nano.html
+++ b/nano.html
@@ -134,7 +134,10 @@
 			 box-shadow: 5px 5px #ececec; 
 		}
 		.ima1{
-			background:url('img/actual/nano imagenes/eepos one ETK - Foto 15.jpg');height: 300px;background-size:cover;background-repeat: no-repeat;background-position: center;
+			background:url('img/actual/nano imagenes/eepos one ETK - Foto 15.png') no-repeat center /cover;
+            height: 300px;
+            background-size:cover;
+            background-position: center;
 		}
 		.C1{
 			padding-top: 60px;
@@ -149,7 +152,10 @@
 			width: 550px;
 		}
 		.ima3{
-			background:url('img/actual/nano imagenes/eepos one ETKt - Foto 12.jpg');height: 500px;background-size:cover;background-repeat: no-repeat;background-position: center; 
+			background:url('img/actual/nano imagenes/eepos one ETKt - Foto 12.png') no-repeat center /cover;
+            height: 500px;
+            background-size:cover;
+            background-position: center; 
 		}
 		.T3{
 			color: #01A9DB;font-style: italic;
@@ -281,7 +287,10 @@
 			 box-shadow: 5px 5px #ececec; 
 		}
 		.ima1{
-			background:url('img/actual/nano imagenes/eepos one ETK - Foto 15.jpg');height: 200px;background-size:cover;background-repeat: no-repeat;background-position: center;
+			background:url('img/actual/nano imagenes/eepos one ETK - Foto 15.png')  no-repeat center /cover;;
+            height: 200px;
+            background-size:cover;
+            background-position: center;
 		}
 		.C1{
 			padding-top: 30px;
@@ -298,7 +307,10 @@
 			height: 75%;
 		}
 		.ima3{
-			background:url('img/actual/nano imagenes/eepos one ETKt - Foto 12.jpg');height: 250px;background-size:cover;background-repeat: no-repeat;background-position: center; 
+			background:url('img/actual/nano imagenes/eepos one ETKt - Foto 12.png') no-repeat center /cover;
+            height: 250px;
+            background-size:cover;
+            background-position: center; 
 		}
 		.T3{
 			color: #01A9DB;font-style: italic;
@@ -358,7 +370,6 @@
 			<li class="nav-item  px-2">
             <a class="nav-link" href="contacto.html">CONTÁCTO</a>
           </li>
-		</li>
 			<li class="nav-item">
             <a class="nav-link" href="contact.html">EEWORLD</a>
           </li>
@@ -372,7 +383,7 @@
 		<p align="center" style="padding-top: 10px;"><i class="fab fa-facebook-square" style="color: white;font-size: 1.5em;"></i></p>
 		<p align="center" style="padding-top: 5px;"><i class="fas fa-envelope-open" style="color: white;font-size: 1.5em;"></i></p>
 	</div>
-<div class="container-fluid ima1" ></div>
+    <div class="ima1" ><div style="background: rgba(253,174,132,.7); height: 100%;"></div></div>
 	
   <div class="container">
 	  	<div class="row">
@@ -382,15 +393,15 @@
 				<h2 class="T2">MUEVE DE FORMA<br>SEGURA Y PRECISA</h2>
 				
 			</div>
-			<div class="col-6 col-md-6">
-				<img class="ima2" src="img/actual/imagenes productos/rai modular 1 nano.png">
+			<div class="col-6 col-md-6 ima2" style="background: url('img/actual/imagenes productos/rai modular 1 nano.png'); no-repeat center /cover; background-size: 590px 380px; background-position: right; height: auto; ">
+				<!--img class="ima2" src="img/actual/imagenes productos/rai modular 1 nano.png"-->
 			
 			</div>
 	  
 	  </div>
 
  </div>
-<div class="container-fluid ima3" ></div>
+<div class="ima3" ><div style="background: rgba(253,174,132,.7); height: 100%;"></div></div>
 	
 <div class="container py-3">
 	
