--- a/index.html
+++ b/index.html
@@ -133,6 +133,9 @@
 		.iconos{
 			font-weight: 400;font-style: italic;font-size: 3.5em;;
 		}
+        .hreficonos{
+            color: black;
+        }
 		.img1{
 			height: 150px;width: 200px;
 		}
@@ -769,24 +772,34 @@
     </header>
 	<div class="row py-2">
 		  <div class="col-2 offset-1 col-md-2 text-center offset-md-1">
+              <a class="hreficonos" href="one.html" title="one">
 				<img id="responsivo2" src="img/one.png">
 			  	<h1 class="iconos">one</h1>
+              </a>
 		</div>
 		<div class="col-2 col-md-2 text-center">
+            <a class="hreficonos" href="nano.html" title="nano">
 				<img id="responsivo2" src="img/nano.png">
 			  	<h1 class="iconos">nano</h1>
+            </a>
 		</div>
 		<div class="col-2 col-md-2 text-center">
+            <a class="hreficonos" href="carbon.html" title="carbon">
 				<img id="responsivo2" src="img/carbon.png">
 			  	<h1 class="iconos">carbon</h1>
+            </a>
 		</div>
 		<div class="col-2 col-md-2 text-center">
+            <a class="hreficonos" href="move.html" title="move">
 				<img id="responsivo2" src="img/move.png">
 			  	<h1 class="iconos">move</h1>
+            </a>
 		</div>
 		<div class="col-2 col-md-2 text-center">
+            <a class="hreficonos" href="base.html" title="base">
 				<img id="responsivo2" src="img/base.png">
 			  	<h1 class="iconos">base</h1>
+            </a>
 		</div>
     
 
