--- a/one.html
+++ b/one.html
@@ -2,12 +2,12 @@
 <html lang="en">
 
 <head>
-
+  <!--script src="js/resolucion.js" type="text/javascript"></script-->
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="description" content="">
   <meta name="author" content="">
-    <link rel="stylesheet" href="css/one.css">
+  <link rel="stylesheet" href="css/one.css">
 
   <title>one</title>
 
@@ -18,38 +18,12 @@
   <link href="css/modern-business.css" rel="stylesheet">
 	<style>
 
-		.bg-gris{
-			background: url("img/actual/navB.jpg");
-		}
-		#responsivo{
-			max-width: 100%;
-			height: 45px;
-		}
-		
-		
-		#negritas{
-			font-weight:500;
-		}
-		
-		.navbar-light .navbar-nav .nav-link{
-			color: black;
-		}
-		
-		.cuadrado {
-     		width: 30px; 
-     		height: 100px; 
-     		background: #01A9DB;
-			border-radius: 15px;
-			z-index: 999;
-			 box-shadow: 5px 5px #ececec; 
-		}
 		
 	</style>
 
 </head>
 
 <body style="padding-top:0;">
-
   <!-- Navigation -->
 <div class="container-fluid" style="height: 10px;">
 		
@@ -170,20 +144,20 @@
             </div>
         </div>
         
-        <div class="container-fluid py-5">
+      <div class="container-fluid py-5">
 		  <div class="row" >
-            <div class="col-md-2" id="" style="display: table; height: 300px;">
+            <div class="col-md-2" id="sellos">
                 <div style="display: table-cell; vertical-align: middle; ">
-                    <div style="display: flex; height: 60px; border-right: 7px solid; padding: 10px">
-                    <h1 style="font-family: FrutigerUltraBlack; color: rgb(0,170,221); vertical-align: middle; margin: auto ">SELLOS</h1>
+                    <div class="bordesellos">
+                    <h1 class="palabrasellos">SELLOS</h1>
                     </div>
                 </div>
             </div>
-            <div class="col-md-3" style="display: table; height: 300px; ">
-                <div style="display: table-cell; vertical-align: middle; background: url(img/one/unnamed.png); background-size: cover">
+            <div class="col-md-3" id="colimagen">
+                <div class="imagenrueda">
                 </div>
             </div>
-            <div class="col-md-6" style="display: table; height: 300px; ">
+            <div class="col-md-6" id="heightlistaone">
                 <div style="display: table-cell; vertical-align: middle;">
                     <p class="listaone">6 Tamaños de perfil para cargos de hasta 2,000 kg</p>
                     <br>
