--- a/carbon.html
+++ b/carbon.html
@@ -7,8 +7,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="description" content="">
   <meta name="author" content="">
-    
-    <link rel="stylesheet" href="css/carbon.css">
+  <link rel="stylesheet" href="css/fuentes.css">
+  <link rel="stylesheet" href="css/carbon.css">
 
   <title>carbon</title>
 
@@ -69,7 +69,10 @@
             <div style=" background: rgba(133,133,133,.7);">
             <div class="banner-content">
                 <span class="sistemamodular">
-                        SISTEMA MODULAR DE ALUMINIO<br>PARA CARGAS DE HASTA 2000 KG.
+                    <div class="posicionbannertitulo">
+                        <h1 class="bannertitulo">PERFIL DE GRÚA ULTRALIGERO</h1>
+                        <h1 class="bannertitulo">PARA CARGAS DE HASTA 100 KG.</h1>
+                    </div>
                 </span>
             </div>
                 </div>
@@ -128,13 +131,15 @@
         </div>
         
         <div class="container-fluid py-5" style="background: rgb(236,236,236);">
-			<div class="row" >
-            	<div class="col-md-2" id="displayperfildecarbono">
+			<div class="row " >
+                <div class="col-md-2 col-sm-0"></div>
+            	<div class="col-md-3 col-sm-6" id="displayperfildecarbono">
                 	<div style="display: table-cell; vertical-align: middle">
-                    	<h1 class="perfildecarbono">Perfil de Carbono</h1>
+                    	<h1 class="perfildecarbono">Perfil de</h1>
+                        <h1 class="perfildecarbononegro">Carbono</h1>
                 	</div>
             	</div>
-            	<div class="col-md-6" id="displayperfildecarbono">
+            	<div class="col-md-6 col-sm-6" id="displayperfildecarbono">
                 	<div style="display: table-cell; vertical-align: middle;">
                     	<p>Con un peso propio de 1,7 kg por metro lineal, el perfil de carbono eepos es extremadamente ligero y ofrece la máxima capacidad de carga con la máxima rigidez.<br>El perfil es compatible con el sistema eepos one. Utilizado en nuestras grúas giratorias, impresiona especialmente cuando se manejan pesos ligeros.</p>
                 	</div>
