--- a/one.html
+++ b/one.html
@@ -8,7 +8,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
   <link rel="stylesheet" href="css/one.css">
-
+  <link rel="stylesheet" href="css/fuentes.css">
   <title>one</title>
 
   <!-- Bootstrap core CSS -->
@@ -144,8 +144,8 @@
             </div>
         </div>
         
-      <div class="container-fluid py-5">
-		  <div class="row" >
+      <div class="container-fluid">
+		  <div class="row" id="centrosellos">
             <div class="col-md-2" id="sellos">
                 <div style="display: table-cell; vertical-align: middle; ">
                     <div class="bordesellos">
@@ -153,11 +153,11 @@
                     </div>
                 </div>
             </div>
-            <div class="col-md-3" id="colimagen">
+            <div class="col-md-4" id="colimagen">
                 <div class="imagenrueda">
                 </div>
             </div>
-            <div class="col-md-6" id="heightlistaone">
+            <div class="col-md-5" id="heightlistaone">
                 <div style="display: table-cell; vertical-align: middle;">
                     <p class="listaone">6 Tamaños de perfil para cargos de hasta 2,000 kg</p>
                     <br>
@@ -170,7 +170,7 @@
                     <p class="listaone"> 1 Tren de rodaje eepos para todos los tipos de perfil XS-XXL</p>
                     <br>
                     <p class="listaone">Amplia gama de accesorios</p>
-                    <br>
+                    
                 </div>
             </div>
 	       </div>
