--- a/base.html
+++ b/base.html
@@ -7,8 +7,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="description" content="">
   <meta name="author" content="">
-    
-    <link rel="stylesheet" href="css/base.css">
+  <link rel="stylesheet" href="css/fuentes.css">
+  <link rel="stylesheet" href="css/base.css">
 
   <title>base</title>
 
