--- a/carbon.html
+++ b/carbon.html
@@ -68,12 +68,10 @@
     <div class="banner">
             <div style=" background: rgba(133,133,133,.7);">
             <div class="banner-content">
-                <span class="sistemamodular">
                     <div class="posicionbannertitulo">
-                        <h1 class="bannertitulo">PERFIL DE GRÚA ULTRALIGERO</h1>
-                        <h1 class="bannertitulo">PARA CARGAS DE HASTA 100 KG.</h1>
+                      <div><h1 class="bannertitulo">PERFIL DE GRÚA ULTRALIGERO</h1></div>
+                      <div><h1 class="bannertitulo">PARA CARGAS DE HASTA 100 KG.</h1></div>
                     </div>
-                </span>
             </div>
                 </div>
         </div>
@@ -82,7 +80,7 @@
             <div class="carbonposicion">
                 <div style="display: flex; justify-content: flex-end">
                     <div class="alturaicono" style="display: flex; ">
-                        <img src="img/carbon/carbon.png" alt="" style="align-self: flex-end; height: 70%">
+                        <img src="img/carbon/carbon.png" alt="" class="iconocarbon">
                     </div>
                     <div style="display: flex; height: auto">
                         <span class="textocarbon">
@@ -93,13 +91,14 @@
             </div>
             <p class="montajedebido">MONTAJE DEBIDO A COMPONENTES<br>PREFABRICADOS</p>
         </div>
-        <div class="row">
-            <div class="col-md-8" id="imagenescarbon1">
+        <div class="row"  style="width: 100%; margin: 0">
+            <div class="col-7 col-md-7" id="imagenescarbon1">
                 <div style="background: url(img/carbon/grua%20de%20pluma%20invertida%20carbon.png) no-repeat center /cover;background-size: cover; height: 100%;">
                     <div style="background: rgba(133,133,133,.7); height: 100%"></div>
                 </div>
             </div>
-            <div class="col-md-4">
+            <div class="col-1 col-md-1"></div>
+            <div class="col-4 col-md-4" id="imagenescarbon1">
                 <div style="background: url(img/carbon/fibra%20de%20carbono%20carbon.png) no-repeat center /cover;background-size: cover; height: 100%;">
                     <div style="background: rgba(133,133,133,.7); height: 100%"></div>
                 </div>
@@ -131,21 +130,21 @@
         </div>
         
         <div class="container-fluid py-5" style="background: rgb(236,236,236);">
-			<div class="row " >
-                <div class="col-md-2 col-sm-0"></div>
-            	<div class="col-md-3 col-sm-6" id="displayperfildecarbono">
-                	<div style="display: table-cell; vertical-align: middle">
-                    	<h1 class="perfildecarbono">Perfil de</h1>
-                        <h1 class="perfildecarbononegro">Carbono</h1>
-                	</div>
-            	</div>
-            	<div class="col-md-6 col-sm-6" id="displayperfildecarbono">
-                	<div style="display: table-cell; vertical-align: middle;">
-                    	<p>Con un peso propio de 1,7 kg por metro lineal, el perfil de carbono eepos es extremadamente ligero y ofrece la máxima capacidad de carga con la máxima rigidez.<br>El perfil es compatible con el sistema eepos one. Utilizado en nuestras grúas giratorias, impresiona especialmente cuando se manejan pesos ligeros.</p>
-                	</div>
-            	</div>
-	   		</div>
-		</div>
+          <div class="row " >
+            <div class="col-md-1 col-sm-1"></div>
+           	<div class="col-md-4 col-sm-5" id="displayperfildecarbono">
+            	<div style="display: table-cell; vertical-align: middle">
+                	<h1 class="perfildecarbono">Perfil de</h1>
+                  <h1 class="perfildecarbononegro">Carbono</h1>
+             	</div>
+            </div>
+            <div class="col-md-7 col-sm-6" id="displayperfildecarbono2">
+             	<div style="display: table-cell; vertical-align: middle;">
+               	<p>Con un peso propio de 1,7 kg por metro lineal, el perfil de carbono eepos es extremadamente ligero y ofrece la máxima capacidad de carga con la máxima rigidez.<br>El perfil es compatible con el sistema eepos one. Utilizado en nuestras grúas giratorias, impresiona especialmente cuando se manejan pesos ligeros.</p>
+             	</div>
+            </div>
+	   		  </div>
+		    </div>
     
 <!--CARBON FINAL-->
   <!-- /.container -->
