--- a/base.html
+++ b/base.html
@@ -68,47 +68,55 @@
         <div class="banner">
             <div style=" background: rgba(35,84,132,.7);">
             <div class="banner-content">
-                    <span class="bannersistemamodular">
-                        SISTEMA MODULAR DE ALUMINIO<br>PARA CARGAS DE HASTA 2000 KG.
-                    </span>
+                    <div class="bannersistemamodular">
+                      <h1 class="estilotextobannerarriba">COLUMNA DE MEDIOS</h1>
+                      <h1 class="estilotextobannerabajo">DE ALUMINIO</h1>
+                    </div>
             </div>
             </div>
         </div>
         
-        <div style="background: url(img/base/capacidad%20de%20ampliacion%20base.png) no-repeat center /cover; background-size: 400px 320px; background-position: right; height: auto;">
+        <div class="columnasbackground">
             <div style="display: flex; position: relative">
                 <div style="display: flex; justify-content: flex-end">
-                    <div style="display: flex; height: 300px">
-                        <img src="img/base/base.png" alt="" style="align-self: flex-end; height: 70%">
+                    <div class="alturaiconocolumnas">
+                        <img src="img/base/base.png" alt="" class="iconocolumnas">
                     </div>
                     <div style="display: flex; height: auto">
-                        <span style="align-self: flex-end; font-family: CoreSans; font-size: 6em; color: red">
+                        <span class="textoiconocolumnas">
                             base
                         </span>
                     </div>
                 </div>
             </div>
-            <p class="bannertexto">Las columnas de medios eepos base aportan energía,<br> datos, aire comprimido, luz, etc. a cada estación de<br>trabajo y son libremente configurables para cada aplicación.</p>
+            <p class="columnastexto col-8">Las columnas de medios eepos base aportan energía, datos, aire comprimido, luz, etc. a cada estación de trabajo y son libremente configurables para cada aplicación.</p>
         </div>
                 
         <div class="row">
-            <div class="col-md-4">
+            <div class="col-md-4 col-12">
                 <img src="img/base/columna%20de%20medios%20base.png" alt="" class="imagencolumnas">
             </div>
-            <div class="col-md-8" style="text-align:left">
+            <div class="col-md-8 col-9" style="text-align:left">
                 <dl>
-                    <dt><span>&#9654</span>Pluma giratoria opcional</dt>
-                    <dt><span>&#9654</span>Brazos de una o dos caras con una capacidad de carga de hasta 100 kg y una longitud de brazo de 3 m (a partir de la talla M)</dt>
-                    <dt><span>&#9654</span>Perfiles en voladizo disponibles en aluminio y carbono</dt>
-                    <dt><span>&#9654</span>Insertos de módulos</dt>
-                    <dt><span>&#9654</span>Insertos de módulo extraíbles en la parte delantera</dt>
-                    <dt><span>&#9654</span>Perfiles de cubierta desmontables</dt>
-                    <dt><span>&#9654</span>Conexiones opcionales</dt>
-                    <dt><span>&#9654</span>Las ranuras compatibles con los artículos dentro y fuera de la columna permiten sus propios accesorios.</dt>
-                    <dt><span>&#9654</span>Las ranuras compatibles con los artículos dentro y fuera de la columna permiten sus propios accesorios.
-                    Diseño interior espacioso para la instalación de cables y mangueras.</dt>
+                    <dt><span style="color: rgb(0,151,221);">&#9654</span>Pluma giratoria opcional</dt>
+                    <dt><span style="color: rgb(0,151,221);">&#9654</span>Brazos de una o dos caras con una capacidad de carga de hasta 100 kg y una longitud de brazo de 3 m (a partir de la talla M)</dt>
+                    <dt><span style="color: rgb(0,151,221);">&#9654</span>Perfiles en voladizo disponibles en aluminio y carbono</dt>
+                    <dt><span style="color: rgb(0,151,221);">&#9654</span>Insertos de módulos</dt>
+                    <dt><span style="color: rgb(0,151,221);">&#9654</span>Insertos de módulo extraíbles en la parte delantera</dt>
+                    <dt><span style="color: rgb(0,151,221);">&#9654</span>Perfiles de cubierta desmontables</dt>
+                    <dt><span style="color: rgb(0,151,221);">&#9654</span>Conexiones opcionales</dt>
+                    <dt><span style="color: rgb(0,151,221);">&#9654</span>Las ranuras compatibles con los artículos dentro y fuera de la columna permiten sus propios accesorios.</dt>
+                    <dt><span style="color: rgb(0,151,221);">&#9654</span>Las ranuras compatibles con los artículos dentro y fuera de la columna permiten sus propios accesorios.</dt>
+                    <dt><span style="color: rgb(0,151,221);">&#9654</span>Diseño interior espacioso para la instalación de cables y mangueras.</dt>
                 </dl>
             </div>
+        </div>
+        <div class="container-fluid" style="background-color: white">
+            <div class="container py-5" style="text-align: center">
+                <a href="http://eenet.eepos.services/download/eepos-katalog" title="catalogo" style="">
+                    <img src="img/boton%20catalogo.png" alt="">
+                </a>
+         </div>
         </div>
     <!--FIN CONTENIDO BASE-->
   <!-- Footer -->
