navbar correccion eeworld

--- a/index.html
+++ b/index.html
@@ -701,7 +701,7 @@
             <a class="nav-link" href="contacto.html">CONTÁCTO</a>
           </li>
 			<li class="nav-item">
-            <a class="nav-link" href="contact.html">EEWORLD</a>
+            <a class="nav-link" href="https://www.eepos.co.uk/eeworld.html">EEWORLD</a>
           </li>
           
         </ul>
