--- a/servicio.html
+++ b/servicio.html
@@ -129,7 +129,7 @@
 	<div class="container-fluid" style="height: 10px;">
 		
 	</div>
-  <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-gris sticky-top">
+    <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-gris sticky-top">
     <div class="container">
      
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
@@ -151,7 +151,7 @@
             <a class="nav-link" href="contacto.html">CONTÁCTO</a>
           </li>
 			<li class="nav-item">
-            <a class="nav-link" href="contact.html">EEWORLD</a>
+            <a class="nav-link" href="https://www.eepos.co.uk/eeworld.html">EEWORLD</a>
           </li>
           
         </ul>
