--- a/carbon.html
+++ b/carbon.html
@@ -9,6 +9,7 @@
   <meta name="author" content="">
   <link rel="stylesheet" href="css/fuentes.css">
   <link rel="stylesheet" href="css/carbon.css">
+  <link rel=icon href="favicon.png">
 
   <title>carbon</title>
 
