--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="description" content="">
   <meta name="author" content="">
+  <link rel=icon href="favicon.png">
 
-  <title>Modern Business - Start Bootstrap Template</title>
+  <title>Nosotros</title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -108,7 +109,6 @@
 		}
 		#video{
 			  height: 500px;
-			  width: 100%;
 		  }
 		
 		.cuadrado {
@@ -268,7 +268,6 @@
 		}
 		#video{
 			  height: 400px;
-			  width: 100%;
 		  }
 		
 		.cuadrado {
@@ -429,7 +428,6 @@
 		}
 		#video{
 			  height: 280px;
-			  width: 100%;
 		  }
 		
 		.cuadrado {
@@ -590,7 +588,6 @@
 		}
 		#video{
 			  height: 280px;
-			  width: 100%;
 		  }
 		
 		.cuadrado {
@@ -767,7 +764,9 @@
 	  <h1  align="center" class="texto1">MARCA LIDER EN GRÚAS Y SISTEMAS DE GUIADO DE ALUMINIO</h1>
 	  <header class="header text-center py-3">
       
-        <video id="video" src="img/Typing on Keyboard of MacBook Pro.mp4"  autoplay muted></video>
+        <video id="video"  autoplay muted controls>
+        	<source src="img/Typing on Keyboard of MacBook Pro.mp4" type="video/mp4">
+        </video>
       
     </header>
 	<div class="row py-2">
