--- a/move.html
+++ b/move.html
@@ -10,6 +10,7 @@
   <title>move</title>
   <link rel="stylesheet" href="css/fuentes.css">
   <link rel="stylesheet" href="css/move.css">
+  <link rel=icon href="favicon.png">
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
