--- a/productos.html
+++ b/productos.html
@@ -7,8 +7,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="description" content="">
   <meta name="author" content="">
+  <link rel=icon href="favicon.png">
 
-  <title>Modern Business - Start Bootstrap Template</title>
+  <title>Productos</title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -749,7 +750,7 @@
 		<div class="col-12 col-md-12 text-center">
 	  	<div class="row">
 			<div  class="col-4 col-md-4 C2">
-				<a href="index.html" title="one">
+				<a href="one.html" title="one">
                     <div id="imgRedonda" class="row" style="background: url('img/actual/imagenes productos/eepos%20one%20ETKt%20-%20Foto%2016.png');background-position: center;background-size: cover;">
                         <div style=" background: rgba(3,93,161,.7); width: 100%">
 					       <div class="col-12 col-md-12 text-center C4">
@@ -763,7 +764,7 @@
 			<div  class="col-4 col-md-4 C2">
 				<div class="row">
 					<div class="col-12 col-md-12">
-                        <a href="index.html" title="nano">
+                        <a href="nano.html" title="nano">
 						  <div id="imgRedonda2" class="row" style="background: url('img/actual/imagenes%20productos/eepos%20one%20ETK%20-%20Foto%2015.png');background-position: center;background-size: cover;">
 					           <div style=" background: rgba(3,93,161,.7); width: 100%">
                                     <div class="col-12 col-md-12 text-center C3">
@@ -775,7 +776,7 @@
 					</div>
 					
 					<div class="col-12 col-md-12 C3" >
-                        <a href="index.html" title="move">
+                        <a href="move.html" title="move">
 						  <div id="imgRedonda2" class="row" style="background: url('img/actual/imagenes%20productos/estacion%20de%20montajes%20move.png');background-position: center;background-size: cover;">
                             <div style=" background: rgba(3,93,161,.7); width: 100%">
 					           <div class="col-12 col-md-12 text-center C3">
@@ -787,7 +788,7 @@
 					</div>
 					
 					<div class="col-12 col-md-12 C3">
-                        <a href="index.html" title="base">
+                        <a href="base.html" title="base">
 						<div id="imgRedonda2" class="row" style="background: url('img/actual/maquina%20de%20inyeccion%20base.png');background-position: center;background-size: cover;">
                             <div style=" background: rgba(3,93,161,.7); width: 100%">
 					           <div class="col-12 col-md-12 text-center C3">
@@ -800,7 +801,7 @@
 				</div>	
 			</div>
 			<div  class="col-4 col-md-4 CX">
-                <a href="index.html" title="carbon">
+                <a href="carbon.html" title="carbon">
 				<div id="imgRedonda" class="row" style="background: url('img/actual/imagenes%20productos/grua%20de%20pluma%20invertida%20carbon.png');background-position: center;background-size: cover;">
                     <div style=" background: rgba(3,93,161,.7); width: 100%">
 					<div class="col-12 col-md-12 text-center C4">
