--- a/base.html
+++ b/base.html
@@ -9,6 +9,7 @@
   <meta name="author" content="">
   <link rel="stylesheet" href="css/fuentes.css">
   <link rel="stylesheet" href="css/base.css">
+  <link rel=icon href="favicon.png">
 
   <title>base</title>
 
