--- a/one.html
+++ b/one.html
@@ -9,6 +9,7 @@
   <meta name="author" content="">
   <link rel="stylesheet" href="css/one.css">
   <link rel="stylesheet" href="css/fuentes.css">
+  <link rel=icon href="favicon.png">
   <title>one</title>
 
   <!-- Bootstrap core CSS -->
