--- a/carbon.html
+++ b/carbon.html
@@ -146,6 +146,13 @@
             </div>
 	   		  </div>
 		    </div>
+<div class="container-fluid" style="background-color: white">
+    <div class="container" style="text-align: center">
+        <a href="http://eenet.eepos.services/download/eepos-katalog" title="catalogo" style="">
+            <img src="img/boton%20catalogo.png" alt="">
+        </a>
+  </div>
+</div>
     
 <!--CARBON FINAL-->
   <!-- /.container -->
