--- a/move.html
+++ b/move.html
@@ -122,6 +122,13 @@
                 </section>
             </div>
         </div>
+        <div class="container-fluid" style="background-color: white">
+    <div class="container" style="text-align: center">
+        <a href="http://eenet.eepos.services/download/eepos-katalog" title="catalogo" style="">
+            <img src="img/boton%20catalogo.png" alt="">
+        </a>
+  </div>
+</div>
     
     <!--FINMOVE CONTENIDO-->
 
