--- a/contacto.html
+++ b/contacto.html
@@ -613,8 +613,8 @@
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul id="negritas" class="navbar-nav text-left">
          
-          <li class="nav-item active px-2" >
-            <a class="nav-link" style="font-weight: 900;" href="index.html">NOSOTROS</a>
+          <li class="nav-item  px-2" >
+            <a class="nav-link"  href="index.html">NOSOTROS</a>
           </li>
           <li class="nav-item  px-2">
             <a class="nav-link" href="productos.html">PRODUCTOS</a>
@@ -623,9 +623,9 @@
             <a class="nav-link" href="servicio.html">SERVICIO</a>
           </li>
 			<li class="nav-item  px-2">
-            <a class="nav-link" href="contacto.html">CONTÁCTO</a>
+            <a class="nav-link" style="font-weight: 900;" href="contacto.html">CONTÁCTO</a>
           </li>
-			<li class="nav-item">
+			<li class="nav-item active">
             <a class="nav-link" href="https://www.eepos.co.uk/eeworld.html">EEWORLD</a>
           </li>
           
