--- a/nano.html
+++ b/nano.html
@@ -685,14 +685,14 @@
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul id="negritas" class="navbar-nav text-left">
          
-          <li class="nav-item active px-2" >
-            <a class="nav-link" style="font-weight: 900;" href="index.html">NOSOTROS</a>
+          <li class="nav-item  px-2" >
+            <a class="nav-link"  href="index.html">NOSOTROS</a>
           </li>
-          <li class="nav-item  px-2">
-            <a class="nav-link" href="productos.html">PRODUCTOS</a>
+          <li class="nav-item active px-2">
+            <a class="nav-link" style="font-weight: 900;" href="productos.html">PRODUCTOS</a>
           </li>
 			<li class="nav-item  px-2">
-            <a class="nav-link" href="servicio.html">SERVICIO</a>
+            <a class="nav-link"  href="servicio.html">SERVICIO</a>
           </li>
 			<li class="nav-item  px-2">
             <a class="nav-link" href="contacto.html">CONTÁCTO</a>
